--- a/Comp354Project/Project-UI/src/index.html
+++ b/Comp354Project/Project-UI/src/index.html
@@ -6,11 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
+<app-top-bar><a><h1>354TheStars</h1></a></app-top-bar>
+
+  <router-outlet></router-outlet>
 
   <app-root></app-root>
-
-
 </body>
 </html>
