added structure to index page

--- a/Comp354Project/Project-UI/src/index.html
+++ b/Comp354Project/Project-UI/src/index.html
@@ -14,5 +14,36 @@
   <router-outlet></router-outlet>
 
   <app-root></app-root>
+
+
+<!-- Main html document-->
+<div style="height:200px;width:50%;border-style:solid;border-color:cyan;"> Header component</div>
+
+
+<h1> Welcome to 354TheStars</h1>
+<h2> Purchase products or sell them, right here.</h2>
+<br/>
+Login now to access a variety of feature. Non members are restricted to browsing only.
+<button type="button">Register / Login</button>
+<br/><br/>
+
+
+<!-- DIV boxes-->
+<div style="width:80%;overflow: auto">
+  <div style="border-style:solid;border-color:red;height:250px;width:20%;float:left;">Trending (component)</div>
+  <div style="border-style:solid;border-color:red;height:250px;width:20%;float:left;">Most Popular (component)</div>
+  <div style="border-style:solid;border-color:red;height:250px;width:20%;float:left;">Your Recently Viewed (component)</div>
+  <div style="border-style:solid;border-color:red;height:250px;width:20%;float:left;">Join Today (component)</div>
+</div>
+
+<!-- Button to test routing-->
+<br/>
+<br/>
+<br/>
+
+button to test routing:
+<br/>
+<button type="button">On click load another page?</button>
+
 </body>
 </html>
