completed header html & added html to index file

--- a/Comp354Project/Project-UI/src/index.html
+++ b/Comp354Project/Project-UI/src/index.html
@@ -7,8 +7,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="background-color:silver;">
   <app-root></app-root>
-Hello
+
+
+  <h1> Welcome to 354TheStars</h1>
+  <h2> Purchase products or sell them, right here.</h2>
+  <br/>
+  Login now to access a variety of feature. Non members are restricted to browsing only.
+  <br/><br/>
+
+
+  <!-- DIV boxes-->
+  <div>
+    <div style="height:250px;width:25px;float:left;"></div>
+    <div style="border-style:solid;border-color:red;height:250px;width:15%;float:left;">Trending (component)</div>
+          <div style="height:250px;width:35px;float:left;"></div>
+    <div style="border-style:solid;border-color:red;height:250px;width:15%;float:left;">Most Popular (component)</div>
+          <div style="height:250px;width:35px;float:left;"></div>
+    <div style="border-style:solid;border-color:red;height:250px;width:15%;float:left;">Your Recently Viewed (component)</div>
+  </div>
+
+
 </body>
 </html>
