HeaderComponent & added more html to index

--- a/Comp354Project/Project-UI/src/index.html
+++ b/Comp354Project/Project-UI/src/index.html
@@ -19,15 +19,26 @@
 
 
   <!-- DIV boxes-->
-  <div>
+  <div style="height:300px;background-color:gray;">
+
+    <div style="height:25px;width:2500px;float:left;"></div>
     <div style="height:250px;width:25px;float:left;"></div>
-    <div style="border-style:solid;border-color:red;height:250px;width:15%;float:left;">Trending (component)</div>
+    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Trending (component)</div>
           <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:red;height:250px;width:15%;float:left;">Most Popular (component)</div>
+    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Most Popular (component)</div>
           <div style="height:250px;width:35px;float:left;"></div>
-    <div style="border-style:solid;border-color:red;height:250px;width:15%;float:left;">Your Recently Viewed (component)</div>
+    <div style="border-style:solid;border-color:saddlebrown;border-width:3px;background-color:white;height:250px;width:15%;float:left;">Your Recently Viewed (component)</div>
+
   </div>
 
+<br/>
+<br/>
+<br/>
+<hr/>
+<h1>Browse..</h1>
 
+
+<hr/>
+Copyright 354TheStars
 </body>
 </html>
