commit before making index a component

--- a/Comp354Project/Project-UI/src/index.html
+++ b/Comp354Project/Project-UI/src/index.html
@@ -10,6 +10,7 @@
 <body style="background-color:silver;">
   <app-root></app-root>
 
+  <div style="height:350px;background-color:grey;">Welcome page Image</div>
 
   <h1> Welcome to 354TheStars</h1>
   <h2> Purchase products or sell them, right here.</h2>
@@ -38,8 +39,5 @@
 <h1>Browse..</h1>
 
 
-<hr/>
-Copyright 354TheStars
-<app-footer-area></app-footer-area>
 </body>
 </html>
